# ComUnity

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  ComUnity.drawio  Deluxe Edition 2025 IV  README.md  vcpkg.json
Content/Saves/: Preferences.ComUnitySave
Content/test/test2/: testClass.cpp  testClass.h
Content/test2/: truc.h
Content/testfolder/: class_test.cpp  class_test.h
Source/: Main.cpp  Main.h
Source/Actors/: Actor.cpp  Actor.h  Core.cpp  Core.h  Grid.cpp  Grid.h  Skybox.cpp  Skybox.h  SoundActor.cpp  SoundActor.h  Transform.h
Source/Actors/Cameras/: CameraActor.cpp  CameraActor.h
Source/Actors/Lights/: LightActor.cpp  LightActor.h
Source/Collision/: Bounds.cpp  Bounds.h  Channel.cpp  Channel.h  CollisionComponent.cpp  CollisionComponent.h  CollisionManager.cpp  CollisionManager.h  Component.cpp  Component.h  CoreMinimal.h  Singleton.h  SubclassOf.h  Utilities.cpp  Utilities.h
Source/Common/: DeprShader.cpp  DeprShader.h  Deprtexture.cpp  Deprtexture.hpp  Shader.cpp  Shader.h  controls.cpp  controls.hpp  objloader.cpp  objloader.hpp  tangentspace.cpp  tangentspace.hpp  text2D.cpp  texture.cpp  texture.hpp  vboindexer.cpp  vboindexer.hpp
Source/Components/: CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  DirectionalLightComponent.cpp  DirectionalLightComponent.h  ITransformableModifier.h  ITransformableViewer.h  LightComponent.cpp  LightComponent.h  PointLightComponent.cpp  PointLightComponent.h  SoundComponent.cpp  SoundComponent.h  SpotLightComponent.cpp  SpotLightComponent.h  StaticMeshComponent.cpp  StaticMeshComponent.h  TransformComponent.cpp  TransformComponent.h
Source/Editor/: Color.h  Controller.cpp  Controller.h  CustomException.h  DeprMain.cpp  Engine.cpp  Engine.h  Level.cpp  Level.h  Logger.cpp  Logger.h  Main.cpp  MainLoop.cpp  MainLoop.h  World.cpp  World.h
Source/Editor/Windows/: Window.cpp  Window.h
Source/IMGUI/: imgui_stdlib.cpp
Source/Manager/: ActorManager.cpp  ActorManager.h  Level.cpp  Level.h  LevelManager.h  Singleton.h  SoundManager.cpp  SoundManager.h
Source/Managers/: LightManager.cpp  LightManager.h
Source/Math/: Angle.h  Mat4.h  Matrix2x2.h  Matrix3x3.h  Quaternion.h  Ray.h  Transform.h  Vector2.h  Vector3.h  Vector4.h  mathematics.h  mathematics_common.h  mathematics_functions.h
Source/NewLightRelated/: Material.cpp  Material.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Source/NewLightRelated/Managers/: TextureManager.cpp  TextureManager.h
Source/NewLightRelated/Util/: ImporterUtil.h
Source/Object/: Object.cpp  Object.h
Source/Serialization/: Serializable.h  Serialization.cpp  Serialization.h  SerializationValue.cpp  SerializationValue.h
Source/Shaders/: BackPack.frag  Cubemap.frag  Cubemap.vert  FragmentLightShader.frag  FragmentLightShaderV2.frag  FragmentLightShaderV3.frag  FragmentShader.frag  GridShader.frag  GridShader.vert  NewFragTest.frag  NewVertTest.vert  VertexShader.vert
Source/Sound/: Sound.cpp  Sound.h
Source/UI/: Canvas.cpp  Canvas.h  ConsoleWidget.cpp  ConsoleWidget.h  ContentWidget.cpp  ContentWidget.h  EditorPreferencesWidget.cpp  EditorPreferencesWidget.h  Event.h  FileManager.cpp  FileManager.h  FontManager.cpp  FontManager.h  GameWidget.cpp  GameWidget.h  HierarchyWidget.cpp  HierarchyWidget.h  InspectorWidget.cpp  InspectorWidget.h  Log.cpp  Log.h  ProjectSettingsWidget.cpp  ProjectSettingsWidget.h  SceneWidget.cpp  SceneWidget.h  Singleton.h  SpawnActorWidget.cpp  SpawnActorWidget.h  TextureManager.cpp  TextureManager.h  Toolbar.cpp  Toolbar.h  UIElement.cpp  UIElement.h  UIImage.cpp  UIImage.h  UIMacros.cpp  UIMacros.h  UIManager.cpp  UIManager.h  (+4 more)
Source/UI/Templates/: actor.cpptemplate  actor.htemplate  class.cpptemplate  class.htemplate  component.cpptemplate  component.htemplate  empty.cpptemplate  empty.htemplate  imgui.ini
Source/Utils/: Array.h  CoreMinimal.h  Event.h  Macro.cpp  Macro.h  String.cpp  String.h  Utility.h
